* Allow commas in meta_key * FAQ on page not found * Fix widget Random order always true condition * Increase bottom margin spacing for listed testimonials * TODO vote casting note * Update localization pot file
git-svn-id: http://plugins.svn.wordpress.org/testimonials-widget/trunk@605286 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/testimonials-widget.css
+++ b/testimonials-widget.css
@@ -83,6 +83,7 @@
 .testimonialswidget_testimonial_list { 
 	display: block;
 	left: initial;
+	margin-bottom: 1.0em;
 	position: relative; 
 	top: initial;
 }
